@@ -51,6 +51,12 @@ systems.</p>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">append</td>
+    <td valign="top">whether output should be appended to or overwrite
+    an existing file.  Defaults to false.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">outputproperty</td>
     <td valign="top">the name of a property in which the output of the 
       command should be stored.</td>
